<resources>
    <string name="app_name">Puskesmas Marker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ayu">dwidianayu</string>
    <string name="ayu_email">adwidian@gmail.com</string>
    <string name="active">Offline </string>
    <string name="about">About</string>
    <string name="list_marker">List Marker</string>
    <string name="maps">Maps</string>
    <string name="login">Login</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <!-- Validation Error -->
    <string name="err_name">the name field is required</string>
    <string name="err_email">the email must be valid email address</string>
    <string name="err_password">the password must be at least 6 character</string>
</resources>
