<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/maps"
            android:title="@string/maps"
            android:icon="@drawable/ic_map_black_24dp"/>
        <item
            android:id="@+id/list_marker"
            android:title="@string/list_marker"
            android:icon="@drawable/ic_pin_drop_black_24dp"/>
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="About"
                />
        </menu>
    </item>

    <item
        android:id="@+id/auth_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout"/>

</menu>